--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_slidable: "^0.5.4"
   url_launcher: ^5.5.0
   provider: ^4.3.1
+  firebase_messaging: ^6.0.16
+
   
 
 dev_dependencies:
