--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  shared_preferences:
   firebase_auth:
   get:
   cloud_firestore:
@@ -40,7 +39,7 @@ dependencies:
   url_launcher: ^5.5.0
   provider: ^4.3.1
   firebase_messaging: ^6.0.16
-
+  shared_preferences: ^0.5.8
   
 
 dev_dependencies:
