--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   provider: ^4.3.1
   firebase_messaging: ^6.0.16
   shared_preferences: ^0.5.8
+  pdf: ^1.11.1
+  printing: ^3.6.1
+  open_file: ^3.0.1
+  path_provider: ^1.6.14
   
 
 dev_dependencies:
@@ -72,10 +76,31 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: calibri
+      fonts:
+        - asset: assets/fonts/calibri.ttf
+    - family: arabic
+      fonts:
+        - asset: assets/fonts/arabic_ui_display.otf
+    - family: Amiri
+      fonts:
+        - asset: assets/fonts/Amiri/Amiri-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Amiri/Amiri-Italic.ttf
+          style: italic
+        - asset: assets/fonts/Amiri/Amiri-Regular.ttf
+          weight: 400
+    - family: marakez
+      fonts:
+        - asset: assets/fonts/MarkaziText-VariableFont_wght.ttf
+    - family: arial
+      fonts:
+        - asset: assets/fonts/ArialUnicodeMS.ttf
+
+
+        #- asset: assets/fonts/Amiri/Amiri-BoldItalic.ttf
+
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
